--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
 body {
+  background: linear-gradient(to top left, rgba(53, 150, 245, 1.0), rgba(78, 245, 61, 1.0)) fixed;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Courier New", Courier, monospace;
 }
 
 code {
